# TestBitlyAnalog

./: pyproject.toml
bitly/: app.py  main.py
bitly/SQL/: CreateTables.sql  Extensions.sql  Schema.sql
bitly/controllers/: LinksController.py  LoginController.py  RegisterController.py  __init__.py
bitly/models/: UserLoginForm.py  UserRegisterForm.py  constants.py  models.py
bitly/repositories/: DbBase.py  UserRepository.py
bitly/utilities/: __init__.py  utils.py
bitly/utilities/auth/: TokenHelper.py
tests/: test_RegisterController.py
